--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "expressjs.routes.autoload": "^0.1.8",
     "http-errors": "~1.6.3",
     "joi": "^17.2.1",
     "morgan": "~1.9.1",
